<?xml version="1.0"?>
<package>
  <name>erle_models</name>
  <version>1.0.0</version>
  <description>The erle models package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="apm@todo.todo">Aurelien Roy</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Author tags -->
  <author email="aurroy@hotmail.com">Aurelien Roy</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>

</package>
